--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+dscanner.ini
 .dub/
 .project
 .settings/
@@ -17,4 +18,6 @@ __test__library__
 aedi-test-library
 aedi-test-unittest
 .vscode/
+./aedibuilddir
+builddir/
 ./aedi
