--- a/source/aermicioi/aedi/util/meson.build
+++ b/source/aermicioi/aedi/util/meson.build
@@ -3,6 +3,7 @@ aermicioi_util_src_d = include_directories('.')
 aermicioi_util_src = files(
     'traits/partial.d',
     'traits/traits.d',
+    'traits/package.d',
     'formatting.d',
     'range.d',
     'typecons.d',
