--- a/source/aermicioi/aedi/util/meson.build
+++ b/source/aermicioi/aedi/util/meson.build
@@ -1,6 +1,6 @@
-aermicioi_util_src_d = include_directories('.')
+aermicioi_aedi_util_src_d = include_directories('.')
 
-aermicioi_util_src = files(
+aermicioi_aedi_util_src = files(
     'traits/partial.d',
     'traits/traits.d',
     'traits/package.d',
