mod the meson build files for the util dir change

--- a/examples/annotation_configuration/meson.build
+++ b/examples/annotation_configuration/meson.build
@@ -1,12 +1,14 @@
+
 annotation_configuration_src = files(
         'source/annotation_configuration.d'
         )
+
 
 annotation_configuration_bin = executable(
         'annotation_configuration-bin',
         [annotation_configuration_src],
         [aermicioi_aedi_src],
-        [aermicioi_util_src],
+        [aermicioi_aedi_util_src],
         include_directories : [aedi_src_d]
         )
 
