--- a/examples/configuration_primitives/meson.build
+++ b/examples/configuration_primitives/meson.build
@@ -6,7 +6,7 @@ configuration_primitives_bin = executable(
         'configuration_primitives-bin',
         [configuration_primitives_src],
         [aermicioi_aedi_src],
-        [aermicioi_util_src],
+        [aermicioi_aedi_util_src],
         include_directories : [aedi_src_d]
         )
 
