--- a/examples/dependencies/meson.build
+++ b/examples/dependencies/meson.build
@@ -6,7 +6,7 @@ dependencies_bin = executable(
         'dependencies-bin',
         [dependencies_src],
         [aermicioi_aedi_src],
-        [aermicioi_util_src],
+        [aermicioi_aedi_util_src],
         include_directories : [aedi_src_d]
         )
 
