--- a/examples/extending_containers/meson.build
+++ b/examples/extending_containers/meson.build
@@ -6,7 +6,7 @@ extending_containers_bin = executable(
         'extending_containers-bin',
         [extending_containers_src],
         [aermicioi_aedi_src],
-        [aermicioi_util_src],
+        [aermicioi_aedi_util_src],
         include_directories : [aedi_src_d]
         )
 
