--- a/examples/extending_generic_factory/meson.build
+++ b/examples/extending_generic_factory/meson.build
@@ -6,7 +6,7 @@ extending_generic_factory_bin = executable(
         'extending_generic_factory-bin',
         [extending_generic_factory_src],
         [aermicioi_aedi_src],
-        [aermicioi_util_src],
+        [aermicioi_aedi_util_src],
         include_directories : [aedi_src_d]
         )
 
