--- a/examples/minimal/meson.build
+++ b/examples/minimal/meson.build
@@ -6,7 +6,7 @@ minimal_bin = executable(
         'minimal-bin',
         [minimal_src],
         [aermicioi_aedi_src],
-        [aermicioi_util_src],
+        [aermicioi_aedi_util_src],
         include_directories : [aedi_src_d]
         )
 
