--- a/examples/named_dependencies/meson.build
+++ b/examples/named_dependencies/meson.build
@@ -6,7 +6,7 @@ named_dependencies_bin = executable(
         'named_dependencies-bin',
         [named_dependencies_src],
         [aermicioi_aedi_src],
-        [aermicioi_util_src],
+        [aermicioi_aedi_util_src],
         include_directories : [aedi_src_d]
         )
 
