--- a/examples/decorating_containers/meson.build
+++ b/examples/decorating_containers/meson.build
@@ -6,7 +6,7 @@ decorating_containers_bin = executable(
         'decorating_containers-bin',
         [decorating_containers_src],
         [aermicioi_aedi_src],
-        [aermicioi_util_src],
+        [aermicioi_aedi_util_src],
         include_directories : [aedi_src_d]
         )
 
