--- a/examples/memory_management/meson.build
+++ b/examples/memory_management/meson.build
@@ -6,7 +6,7 @@ memory_management_bin = executable(
         'memory_management-bin',
         [memory_management_src],
         [aermicioi_aedi_src],
-        [aermicioi_util_src],
+        [aermicioi_aedi_util_src],
         include_directories : [aedi_src_d]
         )
 
